--- a/sophia/templates/contact.html
+++ b/sophia/templates/contact.html
@@ -140,13 +140,11 @@ Contact Us
       <!-- Contacts -->
       <div class="headline"><h2>Where we are</h2></div>
       <p>Since violin lessons are held in our home, the map above shows our approximate
-        location.
-      </p>
-      <p>
+        location. We are a block away from Juliette Low Elementary School in Arlington Heights, IL (<a href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)
+        <br><br>
         Should you decide to schedule lessons, our address will be provided
         to you. 
-      </p>
-      <p>
+        <br><br>
         We apologize for any inconvenience this may cause.
       </p>
 
