--- a/sophia/templates/schedule_trial_lesson.html
+++ b/sophia/templates/schedule_trial_lesson.html
@@ -14,17 +14,16 @@ Schedule Trial Lesson
 {% endblock %}
 
 {% block content %}
-<!--=== Breadcrumbs ===-->
-<div class="breadcrumbs">
+<div class="breadcrumbs-v3 img-v6 text-center">
   <div class="container">
-    <h1 class="pull-left">Schedule Your Trial Lesson</h1>
-    <ul class="pull-right breadcrumb">
-      <li><a href="{% url 'home' %}">Home</a></li>
-      <li class="active">Schedule Trial Lesson</li>
+    <h1>Schedule Your Trial Lesson</h1>
+    <br>
+    <ul class="breadcrumb-v2 list-inline">
+      <li><a href="{% url 'home' %}"><i class="rounded-x fa fa-angle-right"></i>Home</a></li>
+      <li class="active"><i class="rounded-x fa fa-angle-right"></i>Schedule Your Trial Lesson</li>
     </ul>
   </div>
-</div><!--/breadcrumbs-->
-<!--=== End Breadcrumbs ===-->
+</div>
 
 <!--=== Content Part ===-->
 <div class="container content">
@@ -35,13 +34,21 @@ Schedule Trial Lesson
           </div>
       {% endfor %}
   {% endif %}
-  <div class="row margin-bottom-30">
+  <div class="row">
     <div class="col-md-9 mb-margin-bottom-30">
-      <p>Accusamus et iusto odio dignissimos <strong class="color-green">ducimus qui blanditiis</strong> praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing <strong class="color-green">elit landitiis</strong>. Quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet consectetur adipidipiscing elit mag scing. Ut non libero consectetur adipiscing elit magna distinctio lorem ipsum dolor sit amet consectetur adipiscing eliidem rerum facilist.</p><br>
+      <p>
+        Finding a violin teacher can be <strong class="color-green">hard</strong>. You want a teacher who can help you acheive your musical goals. You want a teacher that fits your personality and learning style. You want a teacher that can make learning the violin fun and not feel like a chore.
+        <br><br>
+        These are potentially some of the most important factors in considering the right teacher for you and it's so hard to figure it all out based on a website or a handful of reviews.
+        <br><br>
+        That's why we offer a <strong class="color-green">free, thirty minute, no-commitment lesson</strong> to make it a tad easier for you gauge whether we'd be a good fit as student and teacher. If, after the lesson, you decide we're not the instructor for you, we're glad we could help you figure that out and we wish you the best of luck in your musical journey!
+        <br><br>
+        You've got nothing to lose! Schedule your free lesson today!
+      </p><br>
       <div class="tag-box tag-box-v2">
         <p>Please note that the day and time for your trial lesson will be your official lesson time should you decide to continue lessons.</p>
       </div>
-      <p>Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet consectetur adipiscing elit. Ut non libero consectetur adipiscing elit magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p><br>
+      <p>Lessons are conducted out of our home. Upon sucessful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL (Refer to the map or view on <a href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
     </div>
     <div class="col-md-3">
       <!-- Google Map -->
