Changes link to maps to open in new tab

--- a/sophia/templates/contact.html
+++ b/sophia/templates/contact.html
@@ -140,7 +140,7 @@ Contact Us
       <!-- Contacts -->
       <div class="headline"><h2>Where we are</h2></div>
       <p>Since violin lessons are held in our home, the map above shows our approximate
-        location. We are a block away from Juliette Low Elementary School in Arlington Heights, IL (<a href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)
+        location. We are a block away from Juliette Low Elementary School in Arlington Heights, IL (<a target="_blank" href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)
         <br><br>
         Should you decide to schedule lessons, our address will be provided
         to you. 
