--- a/sophia/templates/schedule_trial_lesson.html
+++ b/sophia/templates/schedule_trial_lesson.html
@@ -48,7 +48,7 @@ Schedule Trial Lesson
       <div class="tag-box tag-box-v2">
         <p>Please note that the day and time for your trial lesson will be your official lesson time should you decide to continue lessons.</p>
       </div>
-      <p>Lessons are conducted out of our home. Upon sucessful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL (Refer to the map or view on <a href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
+      <p>Lessons are conducted out of our home. Upon sucessful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL (Refer to the map or view on <a target="_blank" href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
     </div>
     <div class="col-md-3">
       <!-- Google Map -->
