--- a/sophia/templates/contact.html
+++ b/sophia/templates/contact.html
@@ -154,7 +154,7 @@ Contact Us
 <!--=== End Content Part ===-->
 {% endblock %}
 
-{% block endloaders %}
+{% block scriptloaders %}
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
   <script type="text/javascript" src="{% static 'sophia/plugins/gmap/gmap.js' %}"></script>
   <script type="text/javascript" src="{% static 'sophia/js/app.js' %}"></script>
@@ -162,6 +162,8 @@ Contact Us
   <script src="{% static 'sophia/plugins/ladda-buttons/js/spin.min.js'%}"></script>
   <script src="{% static 'sophia/plugins/ladda-buttons/js/ladda.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'sophia/js/plugins/ladda-buttons.js' %}"></script>
+{% endblock %}
+{% block endloaders %}
   <script type="text/javascript">
     jQuery(document).ready(function() {
       App.init();
