Adds google analytics

--- a/sophia/templates/base.html
+++ b/sophia/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load google_analytics %}
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
@@ -37,6 +38,7 @@
     {% endblock %}
     <!-- CSS Customization -->
     <link rel="stylesheet" href="{% static 'sophia/css/custom.css' %}">
+    {% google_analytics %}
 </head> 
 
 <body>
