--- a/sophia/templates/base.html
+++ b/sophia/templates/base.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load google_analytics %}
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
@@ -38,7 +37,16 @@
     {% endblock %}
     <!-- CSS Customization -->
     <link rel="stylesheet" href="{% static 'sophia/css/custom.css' %}">
-    {% google_analytics %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-80667214-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head> 
 
 <body>
