--- a/sophia/templates/base.html
+++ b/sophia/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{% static 'sophia/favicon.ico' %}">
+    <link rel="shortcut icon" href="{% static 'sophia/shs_favicon.ico' %}">
 
     <!-- Web Fonts -->
     <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin'>
@@ -54,18 +54,21 @@
         <!--=== Header ===-->
         <div class="header">
             <div class="container">
-                <!-- Logo -->
-                <a class="logo" href="{% url 'home' %}">
-                    <img src="{% static 'sophia/basic_logo.png' %}" alt="Logo">
-                </a>
-                <!-- End Logo -->
-
-                <!-- Toggle get grouped for better mobile display -->
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="fa fa-bars"></span>
-                </button>
-                <!-- End Toggle -->
+                <div class="row">
+                    <div class="col-md-4">
+                        <!-- Logo -->
+                        <a class="logo" href="{% url 'home' %}">
+                            <img class="img-responsive" src="{% static 'sophia/logo.png' %}" alt="Logo">
+                        </a>
+                        <!-- End Logo -->
+                    </div>
+                    <!-- Toggle get grouped for better mobile display -->
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="fa fa-bars"></span>
+                    </button>
+                    <!-- End Toggle -->
+                </div>
             </div><!--/end container-->
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -114,7 +117,7 @@
                 <div class="row">
                     <!-- About -->
                     <div class="col-md-3 md-margin-bottom-40">
-                        <a href="index.html"><img id="logo-footer" class="footer-logo" src="assets/img/logo2-default.png" alt=""></a>
+                        <a href="{% url 'home' %}"><img id="logo-footer" class="footer-logo img-responsive" src="{% static 'sophia/logo_wht.png' %}" alt=""></a>
                         <p>Sophia Hsiao provides private violin lessons in <strong>Arlington Heights, IL</strong> for students of all ages and skill levels since 2013</p>   
                     </div><!--/col-md-3-->
                     <!-- End About -->
