Small changes to text on home page

--- a/sophia/templates/home.html
+++ b/sophia/templates/home.html
@@ -44,7 +44,7 @@ Home
                         data-captionhidden="off"
                         style="z-index: 6">
                         Providing private violin lessons for all ages <br/>
-                        in the Northwest Suburbs of Chicago
+                        in Arlington Heights, IL
                     </div>
 
                     <!-- LAYER -->
@@ -90,7 +90,7 @@ Home
                 <i class="rounded-x fa fa-home"></i>
                 <h2 class="title-v3-md text-uppercase margin-bottom-10">Comfortable Environment</h2>
                 <p>We strive to provide a welcoming space for students to learn
-                  at their own pace.</p>
+                  at their own pace. Lessons are conducted out of our home in Arlington Heights, IL.</p>
             </div>
         </div><!--/row-->
     </div><!--/container-->
