--- a/sophia/templates/schedule_trial_lesson.html
+++ b/sophia/templates/schedule_trial_lesson.html
@@ -245,10 +245,7 @@ Schedule Trial Lesson
 {% endblock %}
 
 {% block scriptloaders %}
-<script type="text/javascript" src="{% static 'sophia/plugins/cube-portfolio/cubeportfolio/js/jquery.cubeportfolio.min.js' %}"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-  <script type="text/javascript" src="{% static 'sophia/plugins/gmap/gmap.js' %}"></script>
-  <script type="text/javascript" src="{% static 'sophia/js/page_contacts.js' %}"></script>
+  <script type="text/javascript" src="{% static 'sophia/plugins/cube-portfolio/cubeportfolio/js/jquery.cubeportfolio.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'sophia/js/plugins/cube-portfolio/cube-portfolio-4.js' %}"></script>
   <script src="{% static 'sophia/plugins/ladda-buttons/js/spin.min.js'%}"></script>
   <script src="{% static 'sophia/plugins/ladda-buttons/js/ladda.min.js' %}"></script>
@@ -259,8 +256,6 @@ Schedule Trial Lesson
   <script type="text/javascript">
     jQuery(document).ready(function() {
       App.init();
-      ContactPage.initMap();
-
       var selected_date = $("#id_date").val()
       // This means that the previous form submit was invalid and django
       // returned a form with initial data and errors
@@ -299,5 +294,24 @@ Schedule Trial Lesson
 
 
     });
+  </script>
+  <script>
+      function initMap() {
+        // Create a map object and specify the DOM element for display.
+        var coords = {lat: 42.054434, lng: -87.988861};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: coords,
+          scrollwheel: false,
+          zoom: 15
+        });
+        var marker = new google.maps.Marker({
+          position: coords,
+          map: map,
+          title: 'Sophia Hsiao Studio'
+        });
+      }
+  </script>
+  <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_juqxOZ5IFB7hK0ZNR7OOyZ8CkMp1j7o&callback=initMap">
   </script>
 {% endblock %}
