Attempt to make footer logo clearer

--- a/sophia/templates/base.html
+++ b/sophia/templates/base.html
@@ -117,7 +117,7 @@
                 <div class="row">
                     <!-- About -->
                     <div class="col-md-3 md-margin-bottom-40">
-                        <a href="{% url 'home' %}"><img id="logo-footer" class="footer-logo img-responsive" src="{% static 'sophia/logo_wht.png' %}" alt=""></a>
+                        <a href="{% url 'home' %}"><img id="logo-footer" class="footer-logo" src="{% static 'sophia/logo_wht.png' %}" alt=""></a>
                         <p>Sophia Hsiao provides private violin lessons in <strong>Arlington Heights, IL</strong> for students of all ages and skill levels since 2013</p>   
                     </div><!--/col-md-3-->
                     <!-- End About -->
