Changes title around a bit

--- a/sophia/templates/base.html
+++ b/sophia/templates/base.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
-    <title>{% block headtitle %}{% endblock %} | Sophia Hsiao Studio</title>
+    <title>{% block headtitle %}{% endblock %}Sophia Hsiao Studio - Violin Lessons in Arlington Heights</title>
     {% load staticfiles %}
     <!-- Meta -->
     <meta charset="utf-8">
