--- a/sophia/templates/philosophy.html
+++ b/sophia/templates/philosophy.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block headtitle %}
-Teaching Philosophy
+Teaching Philosophy | 
 {% endblock %}
 
 {% block content %}
