--- a/sophia/templates/contact.html
+++ b/sophia/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block headtitle %}
-Contact Us
+Contact Us | 
 {% endblock %}
 
 {% block headloaders %}
