--- a/sophia/templates/schedule_trial_lesson.html
+++ b/sophia/templates/schedule_trial_lesson.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block headtitle %}
-Schedule Trial Lesson
+Schedule Trial Lesson | 
 {% endblock %}
 
 {% block headloaders %}
