--- a/sophia/templates/testimonials.html
+++ b/sophia/templates/testimonials.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block headtitle %}
-Testimonials
+Testimonials | 
 {% endblock %}
 
 {% block content %}
