Fixes some urls

--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -10,7 +10,7 @@ Studio Policy |
   <div class="container">
     <h1 class="pull-left">Studio Policy</h1>
     <ul class="pull-right breadcrumb">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="{% url 'home' %}">Home</a></li>
       <li class="active">Studio Policy</li>
     </ul>
   </div>
