Updates to content for SEO

--- a/sophia/templates/base.html
+++ b/sophia/templates/base.html
@@ -8,8 +8,9 @@
     <!-- Meta -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Sophia Hsiao Studio provides private violin lessons for children and adults using the Suzuki method.">
+    <meta name="keywords" content="Private Violin Lessons, Violin Lessons, Violin Lessons Arlington Heights, Violin Lessons Mount Prospect, Violin Lessons Elk Grove Village, Violin Lessons Schaumburg, Suzuki, Beginner"
+    <meta name="author" content="Ron Hsiao">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'sophia/shs_favicon.ico' %}">
