--- a/sophia/templates/home.html
+++ b/sophia/templates/home.html
@@ -71,28 +71,27 @@
     <!--=== Service Block ===-->
     <div class="container content-sm">
         <div class="row">
-            <div class="col-md-4 content-boxes-v6 md-margin-bottom-50">
-                <i class="rounded-x fa fa-users"></i>
-                <h1 class="title-v3-md text-uppercase margin-bottom-10">All ages and proficiencies</h1>
-                <p>From child to adult, we believe anyone can learn the violin.
-                  Whether you're a beginner or more advanced, we can help guide
-                  you to the next level in your musicianship.</p>
-            </div>
-            <div class="col-md-4 content-boxes-v6 md-margin-bottom-50">
-                <i class="rounded-x fa fa-music"></i>
-                <h2 class="title-v3-md text-uppercase margin-bottom-10">Suzuki Method</h2>
-                <p>We employ the <a target="_blank" href="https://suzukiassociation.org/about/suzuki-method/">Suzuki method</a> of teaching, which emphasizes hands on learning, comfort with the instrument, and parental involvement with children.</p>
-            </div>
             <div class="col-md-4 content-boxes-v6">
                 <i class="rounded-x fa fa-home"></i>
                 <h2 class="title-v3-md text-uppercase margin-bottom-10">Comfortable Environment</h2>
                 <p>We strive to provide a welcoming space for students to learn
-                  at their own pace. Lessons are conducted out of our home in Arlington Heights, IL.</p>
+                  at their own pace. Violin lessons are conducted out of our home in Arlington Heights, IL. We are minutes away from Schaumburg, Mount Prospect, and Elk Grove Village.</p>
+            </div>
+            <div class="col-md-4 content-boxes-v6">
+                <i class="rounded-x fa fa-music"></i>
+                <h2 class="title-v3-md text-uppercase margin-bottom-10">Suzuki Method</h2>
+                <p>We employ the <a target="_blank" href="https://suzukiassociation.org/about/suzuki-method/">Suzuki method</a> of teaching, which emphasizes hands on learning, comfort with the instrument, and parental involvement with children. From child to adult, we believe anyone can learn the violin.
+                Whether you're a beginner or more advanced, our violin lessons are catered towards achieving your musical goals.</p>
+            </div>
+            <div class="col-md-4 content-boxes-v6">
+                <i class="rounded-x fa fa-gift"></i>
+                <h1 class="title-v3-md text-uppercase margin-bottom-10">Free Trial Lesson</h1>
+                <p>We offer a free, thirty minute, trial violin lesson to help you see if we are the right violin studio for you. If, after the trial lesson, you decide not to continue with us, there's absolutely no obligation. <a href="{% url 'schedule_trial_lesson' %}">Schedule your free trial violin lesson today</a>!</p>
             </div>
         </div><!--/row-->
     </div><!--/container-->
     <!--=== End Service Block ===-->
-    <!--=== Recent Posts ===-->
+
     <div class="bg-color-light">
 
       <div class="container content-sm">
