--- a/sophia/templates/policy.html
+++ b/sophia/templates/policy.html
@@ -49,6 +49,7 @@ Studio Policy |
     <h4><em>Private Lesson Policy</em></h4>
     <ul>
       <li>Private lessons are offered weekly.</li>
+      <li>Payment is due at the first lesson of each month.</li>
       <li>Private lessons will focus on technique, music theory, and musicianship.</li>
       <li>I will notify the student and/or parent when the student needs to purchase new music books or accessories.</li>
     </ul>
