--- a/sophia/templates/schedule_trial_lesson.html
+++ b/sophia/templates/schedule_trial_lesson.html
@@ -43,14 +43,14 @@ Schedule Trial Lesson |
         <br><br>
         These are potentially some of the most important factors in considering the right teacher for you and it's so hard to figure it all out based on a website or a handful of reviews.
         <br><br>
-        That's why we offer a <strong class="color-green">free, thirty minute, no-commitment lesson</strong> to make it a tad easier for you gauge whether we'd be a good fit as student and teacher. If, after the lesson, you decide we're not the instructor for you, we're glad we could help you figure that out and we wish you the best of luck in your musical journey!
+        That's why we offer a <strong class="color-green">free, thirty minute, no-commitment lesson</strong> to make it a tad easier for you gauge whether we'd be a good fit as student and teacher. If, after the lesson, you decide we're not the instructor for you, we're glad we could help you figure that out and we wish you the best of luck in your musical journey.
         <br><br>
-        You've got nothing to lose! Schedule your free lesson today!
+        You've got nothing to lose so schedule your free lesson today!
       </p><br>
       <div class="tag-box tag-box-v2">
         <p>Please note that the day and time for your trial lesson will be your official lesson time should you decide to continue lessons.</p>
       </div>
-      <p>Lessons are conducted out of our home. Upon sucessful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL (Refer to the map or view on <a target="_blank" href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
+      <p>Lessons are conducted out of our home. Upon sucessful scheduling, we will provide you with the address. In the meantime, to give you and approximate location, we are a block away from Juliette Low Elementary School in Arlington Heights, IL and minutes away from Mount Prospect, Elk Grove Village, and Schaumburg (Refer to the map or view on <a target="_blank" href="https://goo.gl/maps/zhes9uXMP4P2">Google Maps</a>)</p><br>
     </div>
     <div class="col-md-3">
       <!-- Google Map -->
